# chesapeake_mhw

./: .gitignore  00_download_geopolar.py  01_MHW&Characteristics_Calculation.ipynb  01_MHW_Calculation.ipynb  01_download_CBPWaterQuality_data.sh  02_CBP_Validation_Intersect.ipynb  02_MHW_Plots.ipynb  03_MHW_Analysis.ipynb  03_Validation_Analysis.ipynb  04_Validation_Analysis.ipynb  DescribingMHW.ipynb  MHW_Diagram_Images.ipynb  MHW_Figure.ipynb  Notes.ipynb  README.md  Untitled.ipynb  Validation_Analysis.ipynb  bathymetry.ipynb  env2.yml  environment.yml  setup.cfg  setup.py
figures/: Diagram_code.ipynb
notebooks/: 03_MHW_Analysis.ipynb  FindingMHW.ipynb  LongTermTrends_MHW.ipynb  PowerPlants.ipynb  README.md  SpatialFollowUp.ipynb  Untitled.ipynb
notebooks/00_download_and_crop/: 00a_generate_satellite_urls.py  00b_download_crop_satellites.py  00c_download_CBPWaterQuality.ipynb  00d_download_ostia.ipynb  00e_crop_satellites.ipynb  crop_cbay.ipynb
notebooks/01_intermediate_processing/: 01a_CBP_station_climatology.ipynb  01a_anomaly_CBP_station_climatology.ipynb  01a_raw_CBP_station_climatology.ipynb  01b_MHW_calc_satellite_climatology.ipynb  01b_MHW_calc_satellite_climatology_detrended.ipynb  01b_MHW_calculation_satellites.ipynb  depth_sensitivity_analysis.ipynb
notebooks/01_intermediate_processing/delete_after_testing/: delete_after_testing_01b_MHW_calc_satellite_climatology_detrended.ipynb  deleteable_01a_raw_CBP_station_climatology.ipynb
notebooks/eventually_deleting/: 02_CBP_Validation_Intersect.ipynb  MHW_Diagram_Images.ipynb  download_clip_mur.ipynb
(+29 files in other folders)
