[sdist]
formats = gztar

[check-manifest]
ignore =
    *.yml
    *.yaml
    .coveragerc
    docs
    docs/*
    *.enc
    notebooks
    notebooks/*
    tests
    tests/*

[flake8]
max-line-length = 105
select = C,E,F,W,B,B950
ignore = E203, E501, W503
exclude = chesapeake_mhw/_version.py


[metadata]
name = chesapeake_mhw
description = Code to support the publication
author = Rachel Wegener
url = https://github.com/rwegener2/chesapeake_mhw
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-3-Clause
license_file = LICENSE.txt

## These need to be filled in by the author!
# For details see: https://pypi.org/classifiers/

classifiers =
    Development Status :: 5 - Production/Stable 
    Topic :: Scientific/Engineering
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    # Dont change this one
    License :: OSI Approved :: BSD License 

## Add your email here
author_email = AUTHOR@EMAIL.COM


### make sure to fill in your dependencies!
[options]
install_requires =
    numpy
    requests
setup_requires= 
    setuptools_scm
python_requires = >=3.6
################ Up until here

zip_safe = False
packages = find:
